Correctly displays answer; name spacing

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -18,7 +18,7 @@ header {
        display: flex;
        justify-content: center;
        margin-top: 0;
-       margin: 5%;
+       margin: 3%;
 
        @include body-text(0.8rem, 1.4rem);
     }
